# cppdemo

./: CMakeLists.txt  README.md  Uninstall.cmake.in  library.cpp  library.h
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
include/: library.h
network/: tempfile_1719739717112.cpp  tempfile_1719739734634.cpp  tempfile_1719739743993.cpp  tempfile_1719739762514.cpp
src/: library.cpp
tests/: CMakeLists.txt  test_library.cpp  test_main.cpp
